--- a/web_app/templates/team.html
+++ b/web_app/templates/team.html
@@ -60,8 +60,8 @@
                     <div class="member-info">
                         <h4>Andrew Rehr</h4>
                         <div class="social">
-                            <a href="https://www.instagram.com/andrew_rehr"><i class="bi bi-instagram"></i></a>
-                            <a href="https://www.linkedin.com/in/andrew_rehr"><i class="bi bi-linkedin"></i></a>
+                            <a href="https://www.instagram.com/andrew_rehr/"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/andrewrehr/"><i class="bi bi-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
@@ -79,15 +79,15 @@
                   </div>
               </div>
           </div>
-          
+
             <div class="col-lg-3 col-md-6">
                 <div class="member">
                     <img src="static/assets/img/ryan.jpg" alt="Ryan Silva">
                     <div class="member-info">
                         <h4>Ryan Silva</h4>
                         <div class="social">
-                            <a href="https://www.instagram.com/ryan_silva"><i class="bi bi-instagram"></i></a>
-                            <a href="https://www.linkedin.com/in/ryan_silva"><i class="bi bi-linkedin"></i></a>
+                            <a href="https://www.instagram.com/ryan.silva19/?hl=en"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/ryan-silva-0abb57167/"><i class="bi bi-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
@@ -99,8 +99,8 @@
                       <div class="member-info">
                           <h4>Kanoon Giri</h4>
                           <div class="social">
-                              <a href="https://www.instagram.com/kanoon_giri"><i class="bi bi-instagram"></i></a>
-                              <a href="https://www.linkedin.com/in/kanoon_giri"><i class="bi bi-linkedin"></i></a>
+                              <a href="https://www.instagram.com/girikanoon/?igshid=NTc4MTIwNjQ2YQ%3D%3D"><i class="bi bi-instagram"></i></a>
+                              <a href="https://www.linkedin.com/in/kanoongiri/"><i class="bi bi-linkedin"></i></a>
                           </div>
                       </div>
                   </div>
